organize data flow
